--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "yahnis-elsts/plugin-update-checker": "5.5",
+        "yahnis-elsts/plugin-update-checker": "^5.5",
         "iconicwp/wpsf": "dev-master"
     },
     "require-dev": {
