[FIX] Class mapping

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
             "Ppfeufer\\Plugin\\DownloadButtonShortcode\\": "Sources"
         },
         "classmap": [
-            "vendor"
+            "Sources/Libs"
         ]
     }
 }
