--- a/composer.json
+++ b/composer.json
@@ -13,30 +13,28 @@
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "wp-cli/wp-cli-bundle": "^2.12",
-        "squizlabs/php_codesniffer": "^3.13"
+        "squizlabs/php_codesniffer": "^3.13",
+        "brianhenryie/strauss": "0.21.1"
     },
     "extra": {
         "strauss": {
             "target_directory": "Sources/Libs",
             "namespace_prefix": "Ppfeufer\\Plugin\\DownloadButtonShortcode\\Libs\\",
-            "packages": [
-                "yahnis-elsts/plugin-update-checker"
-            ],
             "include_modified_date": false,
             "include_author": false
         }
     },
     "scripts": {
-        "prefix-namespaces": [
-            "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
-            "@php bin/strauss.phar",
-            "@composer dump-autoload"
+        "strauss": [
+            "Composer\\Config::disableProcessTimeout",
+            "vendor/bin/strauss",
+            "composer dump-autoload"
         ],
         "post-install-cmd": [
-            "@composer prefix-namespaces"
+            "@strauss"
         ],
         "post-update-cmd": [
-            "@composer prefix-namespaces"
+            "@strauss"
         ]
     },
     "config": {
@@ -50,7 +48,7 @@
             "Ppfeufer\\Plugin\\DownloadButtonShortcode\\": "Sources"
         },
         "classmap": [
-            "Sources/Libs"
+            "vendor"
         ]
     }
 }
