--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "eslint": "^9.37.0",
         "globals": "^16.4.0",
         "stylelint": "^16.25.0",
-        "stylelint-config-standard": "^39.0.1"
+        "stylelint-config-standard": "^39.0.1",
+        "terser": "^5.44.0"
     }
 }
