--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "devDependencies": {
+        "csso-cli": "^4.0.2",
         "eslint": "^9.37.0",
         "globals": "^16.4.0",
         "stylelint": "^16.25.0",
